<resources>
    <!-- App Name -->
    <string name="app_name">WeatherApp</string>

    <!-- Default City -->
    <string name="default_city">MALMÖ, SE</string>

    <!-- Weather Information -->
    <string name="sunrise_time">06:40 AM</string>
    <string name="sunset_time">06:40 AM</string>
    <string name="wind_time">06:40 AM</string>
    <string name="pressure_time">06:40 AM</string>
    <string name="humidity_time">06:40 AM</string>

    <!-- General Messages -->
    <string name="go_home">Go Home</string>
    <string name="error_message">Something went wrong</string>

    <!-- Strings MainActivity -->
    <string name="address">Address</string>
    <string name="updated_at">Updated at: %1$s</string>
    <string name="temperature">Temperature: %1$s</string>
    <string name="min_temp">Min Temp: %1$s</string>
    <string name="max_temp">Max Temp: %1$s</string>
    <string name="pressure">Pressure: %1$s</string>
    <string name="humidity">Humidity: %1$s</string>
    <string name="wind">Wind Speed: %1$s</string>

    <!-- Strings AboutFragment -->
    <string name="about_app">About the App</string>
    <string name="about_app_description">This is a weather app that provides current weather information using OpenWeather API.</string>

    <!-- Strings HomeFragment -->
    <string name="home_fragment_title">Home Fragment</string>
    <string name="go_to_weather_details">Go to Weather Details</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="go_to_about">Go to About</string>

    <!-- Strings SettingsFragment -->
    <string name="settings_title">Settings</string>
    <string name="enter_city_hint">Enter City</string>
    <string name="save_settings">Save Settings</string>
    <string name="city_saved">City saved!</string>
    <string name="enter_city">Please enter a city</string>

    <!-- Strings WeatherDetailsFragment -->
    <string name="address_placeholder">%1$s, %2$s</string>
    <string name="temperature_placeholder">Temperature: %1$s°C</string>
    <string name="min_temp_placeholder">Min Temp: %1$s°C</string>
    <string name="max_temp_placeholder">Max Temp: %1$s°C</string>
    <string name="wind_placeholder">Wind Speed: %1$s m/s</string>
    <string name="pressure_placeholder">Pressure: %1$s hPa</string>
    <string name="humidity_placeholder">Humidity: %1$s%%</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="weather_status">Weather Status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
